# rasptorch

./: .gitignore  LICENSE  MANIFEST.in  README.md  SECURITY.md  TRAINING.md  cnn_demo.py  demo_model.pth  essentials_demo.py  gpu_demo.py  main.py  pyproject.toml  rasptorch CLI.md  requirements.txt  test_import.py  torch_bridge_demo.py
.env/: pyvenv.cfg
.github/workflows/: ci.yml  workflow.yml
openclaw/skills/rasptorch/: SKILL.md
rasptorch/: TRAINING.md  TRAINING_FEATURES.md  VULKAN_OPTIMIZATION.md  __init__.py  _cli_chat.py  _cli_chat_impl.py  _cli_commands.py  _cli_commands_impl.py  _cli_utils_impl.py  amp.py  backend.py  checkpoint.py  cli.py  data.py  data_validation.py  functional.py  gpu_training.py  init.py  nn.py  optim.py  optim_sched.py  tensor.py  torch_bridge.py  train.py  utils.py  vulkan_backend.py
rasptorch/CLI/: __init__.py  _cli_chat.py  _cli_commands.py  _cli_setup.py  _cli_utils.py  cli.py  rasptorch CLI.md
rasptorch/CLI/ui/: app.py
rasptorch/backends/: __init__.py  cpu_backend.py  cuda_backend.py  opencl_backend.py  vulkan_backend.py
rasptorch/shaders/: adam_update.comp  adam_update.spv  adamw_update.comp  adamw_update.spv  add.comp  add.spv  add_broadcast.comp  add_broadcast.spv  add_rowvec.comp  add_rowvec.spv  add_scalar.comp  add_scalar.spv  broadcast_to.comp  col2im_nchw.comp  col2im_nchw.spv  elu.comp  elu.spv  elu_backward.comp  elu_backward.spv  gelu.comp  gelu.spv  gelu_backward.comp  gelu_backward.spv  im2col_nchw.comp  im2col_nchw.spv  layernorm2d.comp  layernorm2d.spv  layernorm2d_backward.comp  layernorm2d_backward.spv  leaky_relu.comp  leaky_relu.spv  leaky_relu_backward.comp  leaky_relu_backward.spv  log_softmax2d.comp  log_softmax2d.spv  log_softmax2d_backward.comp  log_softmax2d_backward.spv  mat2nchw.comp  mat2nchw.spv  matmul.comp  (+65 more)
rasptorch/ui/: app.py
tests/: conftest.py  test_autograd_cpu.py  test_backend_abstraction.py  test_checkpoint_conversion.py  test_cli_backends.py  test_cli_chat_backends.py  test_cli_combine_compatibility.py  test_cli_info.py  test_cli_persistence_and_progress.py  test_cli_transfer_learning.py  test_cnn_mnist.py  test_data_validation.py  test_gpu_autograd_essentials.py  test_main_script.py  test_nn_essentials.py  test_no_grad.py  test_readme_options_extras.py  test_roadmap_extensions.py  test_tensor_ops_cpu.py  test_train_loop_gpu.py  test_ui_helpers.py  test_vulkan_matmul_selection.py  test_vulkan_smoke.py
