[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rasptorch"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "build>=1.4.4",
    "numpy>=1.26",
    "click>=8.1",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["rasptorch*"]

