[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rasptorch"
version = "3.4.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.4",
	"click>=8.0",
	"prompt-toolkit>=3.0",
	"streamlit>=1.56.0",
	"pytest>=9.0.3",
	"twine>=6.2.0",
]

[project.optional-dependencies]
optional = [
    "requests>=2.33.1",
    "pygments>=2.20.0",
    "mako>=1.3.11",
]
dev = [
    "build>=1.4.4",
]
vulkan = [
    "vulkan>=1.3.275.1",
]
cuda = [
    "cupy>=14.0.1",
]
opencl = [
    "pyopencl>=2026.1.2",
]
gpu = [
    "vulkan>=1.3.275.1",
    "cupy>=14.0.1",
    "pyopencl>=2026.1.2",
]

[tool.setuptools.packages.find]
include = ["rasptorch*"]
