[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rasptorch"
version = "1.0.3"
description = "Deep learning library with NumPy and GPU backends (Vulkan, OpenCL, CUDA)."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Joshua Ludolf" },
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.4.4",
    "click>=8.0",
    "prompt-toolkit>=3.0",
    "streamlit>=1.56.0",
]

[project.urls]
Homepage = "https://github.com/Joshua-Ludolf/rasptorch"
Repository = "https://github.com/Joshua-Ludolf/rasptorch"
Issues = "https://github.com/Joshua-Ludolf/rasptorch/issues"

[project.scripts]
rasptorch = "rasptorch.CLI.cli:cli"

[project.optional-dependencies]
optional = [
    "requests>=2.33.1",
    "pygments>=2.20.0",
    "mako>=1.3.11",
]
dev = [
    "build>=1.4.4",
    "pytest>=9.0.3",
    "twine>=6.2.0",
]
vulkan = [
    "vulkan>=1.3.275.1",
]
cuda = [
    "cupy>=14.0.1",
]
opencl = [
    "pyopencl>=2026.1.2",
]
torch = [
    "torch>=2.11.0",
]
numpy = [
    "numpy>=2.4.4",
]
gpu = [
    "vulkan>=1.3.275.1",
    "cupy>=14.0.1",
    "pyopencl>=2026.1.2",
    "torch>=2.11.0"
]

[tool.setuptools.packages.find]
include = ["rasptorch*"]
